--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "^4.4.0",
+    "@material-ui/pickers": "^3.2.5",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
+    "date-fns": "^2.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
