--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "converter-app",
   "version": "0.1.0",
@@ -10,6 +9,7 @@
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "date-fns": "^2.0.1",
+    "enzyme-to-json": "^3.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -45,5 +45,25 @@
   "devDependencies": {
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!<rootDir>/node_modules/",
+      "!<rootDir>/src/state/store.js",
+      "!<rootDir>/src/state/ducks/index.js",
+      "!<rootDir>/src/index.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    }
   }
 }
