--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sinon": "^7.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
