--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.4.0",
     "@material-ui/pickers": "^3.2.5",
     "axios": "^0.19.0",
+    "canvas-prebuilt": "^2.0.0-alpha.14",
     "chart.js": "^2.8.0",
     "date-fns": "^2.0.1",
     "enzyme-to-json": "^3.4.0",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "canvas": "^2.6.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0"
   },
